# ChampSim

./: .gitattributes  .gitignore  CMakeLists.txt  Makefile  test_config.json
branch/bsv/bht/: testfsm.bsv
branch/bsv/bht/src/: testfsm.bsv
branch/bsv/perceptron/: test.c  testfsm.bsv
branch/gold_standard/: MakeFile  Makefile  gold_standard.cc  script.sh
branch/gold_standard/Predictors/Bimodal/Bluespec/: Bimodal.bsv  PredImpl.bsv
branch/gold_standard/Predictors/Bimodal/Model/: Bimodal.hpp  Tage.hpp
branch/gold_standard/Predictors/BimodalDebug/Bluespec/: BimodalDebug.bsv
branch/gold_standard/Predictors/BimodalDebug/Model/: BimodalDebug.hpp
branch/gold_standard/Predictors/TageTest/Bluespec/: BranchParams.bsv  FoldedHistory.bsv  Makefile  (+3 more)
branch/gold_standard/Predictors/TourPredictor/: GlobalBrHistReg.bsv  PredImpl.bsv  Types.bsv
branch/gold_standard/bsv_include/: BrPred.bsv  Predictor.bsv
branch/gold_standard/bsv_src/: reciever.c  testbench.bsv
branch/gold_standard/include/: bsv_predictor.hpp  gold_standard.hpp  types.h
branch/gold_standard/include/Components/: lfsr.hpp
branch/testpred/: bsv_predictor.cc  testpred.cc
branch/testpred/bsv_src/: Predictor.bsv  testfsm.bsv
branch/testpred/bsv_src/TourPredictor/: TourPred.bsv
branch/testpred/src/: prepare.sh  test.c  testfsm.bsv
config/: constants_file.py  defaults.py  filewrite.py  instantiation_file.py  makefile.py  modules.py  parse.py  util.py
inc/: testpred.h  tracereader.h
prefetcher/next_line_instr/: next_line.cc
src/: ooo_cpu.cc  plain_printer.cc  tracereader.cc
test/: test_main.cc
(+7 files in other folders)
